src/app/components/flip-card/flip-card.component.scss
:host{
  display: flex;
  position: relative;
  width: 100%;
  height: 100%;
  flex-grow: 1;
}

.flip-container {
  flex-grow: 1;
  perspective: 1000px;

  &.flipped {
    .flipper {
      transform: rotate3d(0, -1, 0, 180deg);
    }

    .back {
      z-index: 1;
    }
  }

  .flipper {
    position: relative;
    width: 100%;
    height: 100%;
    text-align: center;
    transform-style: preserve-3d;
    transition: transform 0.6s;
    animation: flashflip 0.05s;
    will-change: transform;

    &.notransition{
      transition: none!important;
    }

    .front, .back {
      position: absolute;
      width: 100%;
      height: 100%;
      display: flex;
      backface-visibility: hidden;
    }

    .front {
      transform: rotate3d(0, 0, 0, 0);
    }

    .back {
      transform: rotate3d(0, -1, 0, 180deg);
    }
  }
}

